Introduce build with jlink